# vala-application-template

./: Makefile  meson.build
data/: hello-again.metainfo.xml  meson.build
po/: POTFILES  cs.po
src/: Application.vala
